# PolderFit

./: .gitignore  404.html  INSTALLATION_WINDOWS.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
Dokumente/: Chi_Fit_Functions_and_Inductances_2020-04-06.nb  Johannes Bemerkung SLACK Fitfunktionen.txt  Mueller_Kap2_text.txt  Protokoll_FMR_Python_2026-05-08.docx
TDMS files/: 2023-APR-14-Linescan-2D-map-oop--5K_1.615deg-sorted (1).tdms
ananas/: __init__.py  app.py
ausreisser/: index.html
auswertungsauswahl/: index.html
autowindow/: index.html
bbfmr/: __init__.py  app.py
bewertung/: index.html
datenformate/: index.html
docs/: ausreisser.md  auswertungsauswahl.md  autowindow.md  bewertung.md  datenformate.md  index.md  installation.md  interaktives-fitten.md  kanal-mapping.md  physik-und-fit.md  pipeline.md  test-harness.md  troubleshooting.md  tuning.md  verarbeitung.md
installation/: index.html
interaktives-fitten/: index.html
kanal-mapping/: index.html
physik-und-fit/: index.html
pipeline/: index.html
polderfit/: __init__.py  app.py
search/: search_index.json
test-harness/: index.html
tests/: AUTOWINDOW_ROBUSTHEIT_BERICHT.md  __init__.py  autowindow_results.json  autowindow_runner.py  conftest.py  test_ausreisser.py  test_ausreisser_gui.py  test_auswahl.py  test_auswahl_dialog.py  test_bereichsfit_gui.py  test_fenster_steuerung.py  test_fit.py  test_gui.py  test_inplot_fitting.py  test_inplot_gui.py  test_integration.py  test_io.py  test_kanal_mapping.py  test_kriterien.py  test_mapping_dialog.py  test_physik.py  (+4 more)
(+95 files in other folders)
