[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ananas"
version = "0.1.0"
description = "Breitband-FMR-Auswertung (Portierung von LabVIEW nach Python)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ibrahim Yalcinsoy" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "lmfit>=1.2",
    "npTDMS>=1.9",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
test = ["pytest>=7.4"]

[project.scripts]
ananas = "ananas.app:main"

[tool.setuptools.packages.find]
include = ["ananas*"]

[tool.setuptools.package-data]
"ananas.gui" = ["assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
